--- a/VPEasyWidget/src/main/res/values/attrs.xml
+++ b/VPEasyWidget/src/main/res/values/attrs.xml
@@ -25,6 +25,10 @@
 
     <declare-styleable name="VPImageView">
         <attr name="cornerRadius" format="dimension" />
-        <attr name="dynamicHeight" format="boolean" />
+        <attr name="shape" format="enum">
+            <enum name="normal" value="0"/>
+            <enum name="dynamic" value="1"/>
+            <enum name="square" value="2"/>
+        </attr>
     </declare-styleable>
 </resources>
