--- a/app/src/main/res/layout/vp_image_view_example.xml
+++ b/app/src/main/res/layout/vp_image_view_example.xml
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/img_test3"
-            app:dynamicHeight="true" />
+            app:shape="dynamic" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,6 +72,23 @@
             android:layout_height="wrap_content"
             android:src="@drawable/img_test4"
             app:cornerRadius="10dp"
-            app:dynamicHeight="true" />
+            app:shape="dynamic" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:text="With Corner - Square Image"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <com.vp.vpeasywidget.widgets.VPImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/img_test4"
+            app:cornerRadius="10dp"
+            app:shape="square" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
