--- a/VPEasyWidget/src/main/res/values/attrs.xml
+++ b/VPEasyWidget/src/main/res/values/attrs.xml
@@ -21,6 +21,8 @@
         <attr name="borderColor" format="color" />
         <attr name="borderWidth" format="dimension" />
         <attr name="hasBorder" format="boolean" />
+
+        <attr name="customFont" format="string" />
     </declare-styleable>
 
     <declare-styleable name="VPImageView">
@@ -62,5 +64,30 @@
         <attr name="sp_dropIconTint" format="color" />
 
         <attr name="sp_array" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="VPEditText">
+        <attr name="et_icon" format="reference" />
+        <attr name="et_icon_size" format="dimension" />
+        <attr name="et_iconTint" format="color" />
+        <attr name="et_showIcon" format="boolean" />
+        <attr name="et_icon_position" format="enum">
+            <enum name="left" value="0"/>
+            <enum name="top" value="1"/>
+            <enum name="right" value="2"/>
+            <enum name="bottom" value="3"/>
+        </attr>
+        <attr name="et_backColor" format="color" />
+        <attr name="et_isCapsule" format="boolean" />
+        <attr name="et_capsuleRadius" format="dimension" />
+        <attr name="et_cornerRadiusTopLeft" format="dimension" />
+        <attr name="et_cornerRadiusBottomLeft" format="dimension" />
+        <attr name="et_cornerRadiusTopRight" format="dimension" />
+        <attr name="et_cornerRadiusBottomRight" format="dimension" />
+        <attr name="et_borderColor" format="color" />
+        <attr name="et_borderWidth" format="dimension" />
+        <attr name="et_hasBorder" format="boolean" />
+
+        <attr name="et_customFont" format="string" />
     </declare-styleable>
 </resources>
