--- a/VPEasyWidget/src/main/res/values/attrs.xml
+++ b/VPEasyWidget/src/main/res/values/attrs.xml
@@ -6,10 +6,10 @@
         <attr name="iconTint" format="color" />
         <attr name="showIcon" format="boolean" />
         <attr name="icon_position" format="enum">
-            <enum name="left" value="0"/>
-            <enum name="top" value="1"/>
-            <enum name="right" value="2"/>
-            <enum name="bottom" value="3"/>
+            <enum name="left" value="0" />
+            <enum name="top" value="1" />
+            <enum name="right" value="2" />
+            <enum name="bottom" value="3" />
         </attr>
         <attr name="backColor" format="color" />
         <attr name="isCapsule" format="boolean" />
@@ -28,9 +28,9 @@
     <declare-styleable name="VPImageView">
         <attr name="cornerRadius" format="dimension" />
         <attr name="shape" format="enum">
-            <enum name="normal" value="0"/>
-            <enum name="dynamic" value="1"/>
-            <enum name="square" value="2"/>
+            <enum name="normal" value="0" />
+            <enum name="dynamic" value="1" />
+            <enum name="square" value="2" />
         </attr>
     </declare-styleable>
 
@@ -72,10 +72,10 @@
         <attr name="et_iconTint" format="color" />
         <attr name="et_showIcon" format="boolean" />
         <attr name="et_icon_position" format="enum">
-            <enum name="left" value="0"/>
-            <enum name="top" value="1"/>
-            <enum name="right" value="2"/>
-            <enum name="bottom" value="3"/>
+            <enum name="left" value="0" />
+            <enum name="top" value="1" />
+            <enum name="right" value="2" />
+            <enum name="bottom" value="3" />
         </attr>
         <attr name="et_backColor" format="color" />
         <attr name="et_isCapsule" format="boolean" />
@@ -89,5 +89,26 @@
         <attr name="et_hasBorder" format="boolean" />
 
         <attr name="et_customFont" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="VPLinearLayout">
+        <attr name="ll_cornerRadius" format="dimension" />
+        <attr name="ll_backColor" format="color" />
+        <attr name="ll_borderWidth" format="dimension" />
+        <attr name="ll_borderColor" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="VPRelativeLayout">
+        <attr name="rl_cornerRadius" format="dimension" />
+        <attr name="rl_backColor" format="color" />
+        <attr name="rl_borderWidth" format="dimension" />
+        <attr name="rl_borderColor" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="VPFrameLayout">
+        <attr name="fl_cornerRadius" format="dimension" />
+        <attr name="fl_backColor" format="color" />
+        <attr name="fl_borderWidth" format="dimension" />
+        <attr name="fl_borderColor" format="color" />
     </declare-styleable>
 </resources>
