--- a/VPEasyWidget/src/main/res/layout/vp_auto_spinner.xml
+++ b/VPEasyWidget/src/main/res/layout/vp_auto_spinner.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/parentLayout"
     tools:ignore="ContentDescription">
 
     <RelativeLayout
@@ -58,6 +59,7 @@
             android:layout_toEndOf="@id/vpInLayout"
             android:background="@android:color/transparent"
             android:minHeight="40dp"
+            android:dropDownAnchor="@id/parentLayout"
             android:padding="10dp"
             android:singleLine="true"
             android:textSize="12sp"
