VPSpinner : Spinner Enable/Disable

--- a/VPEasyWidget/src/main/res/values/attrs.xml
+++ b/VPEasyWidget/src/main/res/values/attrs.xml
@@ -63,6 +63,7 @@
         <attr name="sp_dropIcon" format="reference" />
 
         <attr name="sp_array" format="reference" />
+        <attr name="android:enabled"/>
     </declare-styleable>
 
     <declare-styleable name="VPAutoComplete">
