VPAutoComplete/VPSpinner bug fix VPNoDataWidget icon tint and size

--- a/app/src/main/res/layout/vp_autocomplete_example.xml
+++ b/app/src/main/res/layout/vp_autocomplete_example.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             app:act_hasLabel="true"
+            app:act_labelTextSize="12sp"
+            app:act_cross_tint="@color/black"
             app:act_labelText="Countries" />
 
         <com.vp.vpeasywidget.widgets.VPAutoComplete
